--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,13 +1,13 @@
 <main class="index">
     <header class="masthead d-flex">
-        <div class="container text-center my-auto">
-            <h1 class="mb-1">Favorite Links</h1>
+        <div class="container text-center my-auto mx-auto" style="background-color: rgba(0, 0, 0, 0.75);">
+            <h1 class="mb-1">{{user.fullname}}</h1>
             <h3 class="mb-5">
-                <em>Store your favorite Website's Links</em>
+                <em>Tu tienda de ropa favorita</em>
             </h3>
-            <a class="btn btn-primary btn-lg" href="/signin">
-                Let's get started
-            </a>
+                    <div class="mx-auto my-auto">
+            <a class="mx-center my-auto" style="font-size: 100px;" href="/pedidos">Pedidos</a>
+        </div>
         </div>
         <div class="overlay"></div>
     </header>
