--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,7 +1,6 @@
 body {
-    background: #f5f6fa;
-font-family: 'Oswald', sans-serif;
-
+    background: gray  ;
+    font-family: 'Oswald', sans-serif;
     overflow: hidden;
 }
 
@@ -25,11 +24,12 @@ font-family: 'Oswald', sans-serif;
     height: 100%;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    background: url('/img/background.jpeg');
+    background: url('/img/background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 .masthead h1 {
     font-size: 4rem;
