--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,6 +14,7 @@
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   {{!-- STYLES --}}
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/img/logopng.png" type="image/x-icon">
 </head>
 
 <body>
